--- a/session/deno.json
+++ b/session/deno.json
@@ -1,8 +1,8 @@
 {
   "name": "@innovatedev-fresh/session",
-  "version": "0.2.3",
+  "version": "0.3.0",
   "tasks": {
-    "check": "deno fmt --check && deno check ./src && deno lint ./src && deno test -A ./src"
+    "check": "deno fmt --check && deno check ./src && deno lint ./src && deno test -A ./tests"
   },
   "exports": {
     ".": "./src/mod.ts",
