--- a/session/deno.json
+++ b/session/deno.json
@@ -18,5 +18,10 @@
     "exclude": [
       "tests"
     ]
-  }
+  },
+  "license": "MIT",
+  "tags": [
+    "ai-generated",
+    "ai-assisted"
+  ]
 }
