--- a/deno.json
+++ b/deno.json
@@ -3,7 +3,7 @@
     "./session"
   ],
   "tasks": {
-    "check": "deno fmt --check && deno check **/src && deno lint **/src && deno test -A",
+    "check": "deno fmt --check && deno check **/src && deno lint **/src && deno run -A tools/check-docs.ts && deno test -A",
     "compliance": "deno run -A tools/compliance.ts"
   },
   "unstable": [
